# flowerShop

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
FlowerShop/FlowerShop/: settings.py
flower_shop/: pyproject.toml  settings.py  urls.py
flower_shop/FlowerShop/: urls.py
flower_shop/flower_shop/: settings.py  urls.py
flower_shop/goods/: models.py  urls.py
goods/: admin.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_auto_20211025_2006.py  0002_rename_realproduct_product.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20211109_2047.py  0002_rename_quantity_productincart_quantity_in_cart.py  0003_remove_cart_products.py  0004_auto_20211114_1714.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20211030_1714.py
